# cv-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  llm.py  main.py  pyproject.toml  rag.py  resume.index  search.py  settings.py  test_search.py
cv-rag/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
cv-rag/app/: dependencies.py  exceptions.py  main.py
cv-rag/app/api/: __init__.py  chat.py  ready.py
cv-rag/app/core/: config.py  logging.py
cv-rag/app/data/processed/: resume_meta.json
cv-rag/app/data/raw/: about.md  achievements.md  case_studies.md  computer_vision.md  education.md  experience.md  languages.md  llm_genai.md  production_ml.md  projects.md  skills.md  system_design.md  target_roles.md  work_style.md
cv-rag/app/models/: __init__.py  chat.py  search.py
cv-rag/app/services/: llm.py  rag.py  search.py
cv-rag/app/tests/: test_rag.py  test_search.py
data/: about.md  contacts.md  education.md  experience.md  languages.md  projects.md  skills.md
