[project]
name = "cv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.30.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "faiss"
ignore_missing_imports = true
